(feature) Structure project ANgular 17

--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles/styles.scss"
             ],
             "scripts": []
           },
@@ -97,5 +97,8 @@
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "7ceb699b-9248-4cd3-a0d7-0820b054cd67"
   }
 }
